2149: Allow multiple query parameters with the same key
Reviewed-by: erikj, zsong